llm/flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-flux-service
  namespace: llm
  labels:
    app: llm-flux
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30810
    name: http
  selector:
    app: llm-flux
