llm/flux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-flux-ingress
  namespace: llm
spec:
  ingressClassName: traefik
  rules:
  - host: flux.ddellspe.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: llm-flux-service
            port:
              number: 8000
  tls:
  - hosts:
    - flux.ddellspe.dev
    secretName: ddellspe-tls
